--- a/Responses.ipynb
+++ b/Responses.ipynb
@@ -7,9 +7,7 @@
     "<h1>Take Home Challenge 1: Ultimate Technologies, Inc.</h1>\n",
     "<h2>Springboard Data Science Career Track</h2>\n",
     "\n",
-    "Prompt markdown in black\n",
-    "\n",
-    "<font color='darkblue'>My markdown responses in blue</font>"
+    "My responses labeled"
    ]
   },
   {
@@ -137,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='darkblue'>Looks like we have 93,000 logins. Year is not being recorded correctly, and month might not be either, but <i>relative</i> days should be fine—we have 102 consecutive days from the day labeled \"Jan 1\" to the day labeled \"Apr 13\". Another issue is that the first and last days are incomplete. We can drop them to get 100 full days if needed.</font>"
+    "<b>(Me)</b> Looks like we have 93,000 logins. Year is not being recorded correctly, and month might not be either, but <i>relative</i> days should be fine—we have 102 consecutive days from the day labeled \"Jan 1\" to the day labeled \"Apr 13\". Another issue is that the first and last days are incomplete. We can drop them to get 100 full days if needed."
    ]
   },
   {
@@ -284,9 +282,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='darkblue'>From this graph, it appears there are two main demand peaks, in line with my intuition (morning commute and evenings). Based the incorrectly labeled year coupled with the awkward peak times seen here, I would assume what is currently labeled 6:00 AM is actually around 2:00 AM.\n",
+    "<b>(Me)</b> From this graph, it appears there are two main demand peaks, in line with my intuition (morning commute and evenings). Based the incorrectly labeled year coupled with the awkward peak times seen here, I would assume what is currently labeled 6:00 AM is actually around 2:00 AM.\n",
     "\n",
-    "We'll need to take summary statistics across days to see if there is a pattern.</font>"
+    "We'll need to take summary statistics across days to see if there is a pattern."
    ]
   },
   {
@@ -339,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='darkblue'>January 2 proved to be a fairly average day. It's probably correct that what's currently labeled as 6:00AM is an early morning hour, because we clearly see that midnight-to-midnight is in the middle of a demand peak. That assumption means we see steady demand in all daylight hours, with a peak during morning commute and all throughout the active evening hours.</font>"
+    "<b>(Me)</b> January 2 proved to be a fairly average day. It's probably correct that what's currently labeled as 6:00AM is an early morning hour, because we clearly see that midnight-to-midnight is in the middle of a demand peak. That assumption means we see steady demand in all daylight hours, with a peak during morning commute and all throughout the active evening hours."
    ]
   },
   {
@@ -394,7 +392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='darkblue'>Demand is lowest on Monday, rising throughout the week to a peak on Saturday and Sunday to a heavy drop on Monday. Seems like they are labeled correctly. This could correspond with weekend tourism, perhaps.</font>"
+    "<b>(Me)</b> Demand is lowest on Monday, rising throughout the week to a peak on Saturday and Sunday to a heavy drop on Monday. Seems like they are labeled correctly. This could correspond with weekend tourism, perhaps."
    ]
   },
   {
@@ -440,7 +438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='darkblue'>Clearly demand is cyclical by week, but we are also observing an overall upward trend across the observation period. This could be seasonality but it could also be the app gaining popularity over time.</font>"
+    "<b>(Me)</b> Clearly demand is cyclical by week, but we are also observing an overall upward trend across the observation period. This could be seasonality but it could also be the app gaining popularity over time."
    ]
   },
   {
@@ -468,7 +466,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='darkblue'>\n",
     "<h4>My Responses to Part 2</h4>\n",
     "\n",
     "1. <b>For my key metric of success, I would choose mean wait time of all rides in both cities.</b> This is what we are ultimately trying to minimize with this initiative to increase operations in both metropolitan areas. This metric is simple, easy to track, and it should be pretty sensitive to our desired condition—if either city is under-served, our metric will detect the increase in median wait time. One potential issue is that riders get a predicted wait time, so the ones that see the longest waits might be self-selecting out of the model. We could fix this by targeting median predicted wait time, but that chases a different goal (we just want driver crossover for this experiment).\n",
@@ -480,8 +477,7 @@
     "    \n",
     "    b. We will run a difference of means between the experimental week and the control week. Importantly, our test is senstivite to outliers, so we should check to make sure no outliers unnecessarily cloud our results. We should also make sure that we account for any seasonality—this should not be a problem if we select two very similar weeks. Then we create a confidence interval and check to see if zero is in the confidence interval. If zero is within our confidence interval, that means one of our best guesses for the increase from Week 1 to Week 2 is <i>no increase at all,</i> so we would have no reason to move forward with this change.\n",
     "    \n",
-    "    c. If we see a significant change in favor of Week 2, that signals evidence to implement a new policy, but not without reservations. Once we begin reimbursing tolls, drivers will be incentivized to test out a new driving pattern to see if it's worth their effort. If we roll out this change to all drivers at once, a tragedy of the commons could happen: all drivers test out the new route at once, plummet each other's profits, and learn that crossing cities has no reward. I would recommend rolling this out in phases. \"Grandfather in\" the drivers who participated in the experiment by extending their toll reimbursements indefinitely. This will allow us to gradually add confidence in the drivers' long-term reaction to the reimbursed tolls, and it will also allow us to slowly increase the proportion of reimbursed drivers until we achieve our desired wait time.\n",
-    "</font>"
+    "    c. If we see a significant change in favor of Week 2, that signals evidence to implement a new policy, but not without reservations. Once we begin reimbursing tolls, drivers will be incentivized to test out a new driving pattern to see if it's worth their effort. If we roll out this change to all drivers at once, a tragedy of the commons could happen: all drivers test out the new route at once, plummet each other's profits, and learn that crossing cities has no reward. I would recommend rolling this out in phases. \"Grandfather in\" the drivers who participated in the experiment by extending their toll reimbursements indefinitely. This will allow us to gradually add confidence in the drivers' long-term reaction to the reimbursed tolls, and it will also allow us to slowly increase the proportion of reimbursed drivers until we achieve our desired wait time."
    ]
   },
   {
@@ -942,7 +938,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='darkblue'>Since this is a binomial classification problem, the most sensible first approach is logistic regression. This model is the easiest to interpret—it directly ranks the importance of the features by assigning them coefficient values. The bigger the magnitude of the coefficient, the more important the feature.\n",
+    "<b>(Me)</b> Since this is a binomial classification problem, the most sensible first approach is logistic regression. This model is the easiest to interpret—it directly ranks the importance of the features by assigning them coefficient values. The bigger the magnitude of the coefficient, the more important the feature.\n",
     "\n",
     "Other suitable models include XGBClassifier (a random forest ensemble method), K Nearest Neighbors, Naive Bayes Classifier, or even a Reinforcement Learning Classifier.</font>"
    ]
@@ -1037,9 +1033,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='darkblue'>Our first model lacks in both precision and recall. However, it does give us some insights about the key indicators, particulary when it comes to the dummy variables. Being from King's Landing, using an iPhone, and using Ultimate Black were the most important predictors.\n",
-    "\n",
-    "Next, I'll try an XGBClassifier: much more of a \"black box\", but a lot more accurate.</font>"
+    "<b>(Me)</b> Our first model lacks in both precision and recall. However, it does give us some insights about the key indicators, particulary when it comes to the dummy variables. Being from King's Landing, using an iPhone, and using Ultimate Black were the most important predictors. Next, I'll try an XGBClassifier: much more of a \"black box\", but a lot more accurate."
    ]
   },
   {
@@ -1142,7 +1136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='darkblue'>We have a much more accurate model now (80%), but the confusion is still high.</font>"
+    "<b>(Me)</b> We have a much more accurate model now (80%), but the confusion is still high."
    ]
   },
   {
@@ -1156,7 +1150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='darkblue'>Our model identified a few important predictors that increased likelihood of retention:\n",
+    "<b>(Me)</b> Our model identified a few important predictors that increased likelihood of retention:\n",
     "<ul>\n",
     "<li>The average rating of the user by drivers</li>\n",
     "<li>Whether the user faced surge pricing often</li>\n",
@@ -1176,6 +1170,13 @@
     "</ul>\n",
     "</font>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
